// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Item /> checkbox help renders 1`] = `
<fieldset
  id="fieldset-1"
>
  <div>
    <input
      aria-labelledby="input-1-label"
      id="input-1"
      type="checkbox"
      value="1"
    />
    <label
      for="input-1"
      id="input-1-label"
    >
      Label
      <span>
        Help
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`<Item /> checkbox label renders 1`] = `
<fieldset
  id="fieldset-1"
>
  <div>
    <input
      aria-labelledby="input-1-label"
      id="input-1"
      type="checkbox"
      value="1"
    />
    <label
      for="input-1"
      id="input-1-label"
    >
      Label
    </label>
  </div>
</fieldset>
`;

exports[`<Item /> checkbox renders 1`] = `
<fieldset
  id="fieldset-1"
>
  <div>
    <input
      id="input-1"
      type="checkbox"
      value="1"
    />
  </div>
</fieldset>
`;

exports[`<Item /> radio help renders 1`] = `
<fieldset
  id="fieldset-1"
>
  <div>
    <input
      aria-labelledby="input-1-label"
      id="input-1"
      type="radio"
      value="1"
    />
    <label
      for="input-1"
      id="input-1-label"
    >
      Label
      <span>
        Help
      </span>
    </label>
  </div>
</fieldset>
`;

exports[`<Item /> radio label renders 1`] = `
<fieldset
  id="fieldset-1"
>
  <div>
    <input
      aria-labelledby="input-1-label"
      id="input-1"
      type="radio"
      value="1"
    />
    <label
      for="input-1"
      id="input-1-label"
    >
      Label
    </label>
  </div>
</fieldset>
`;

exports[`<Item /> radio renders 1`] = `
<fieldset
  id="fieldset-1"
>
  <div>
    <input
      id="input-1"
      type="radio"
      value="1"
    />
  </div>
</fieldset>
`;
